--- a/01-HTML-CSS/07-SCSS/Or/HomeTask/style.scss
+++ b/01-HTML-CSS/07-SCSS/Or/HomeTask/style.scss
@@ -3,6 +3,18 @@ body {
     background-color: black;
     font-family: 'Outfit', sans-serif;
 
+    h1 {
+        background-image: linear-gradient(60deg, #E21143, #FFB03A);
+        -webkit-background-clip: text;
+        color: transparent;
+        position: relative;
+        top: 25px;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
 
     .menu {
         display: flex;
@@ -46,14 +58,14 @@ body {
 }
 
 .home {
-    &__h1 {
+    h1 {
         font-size: 10vw;
         background-image: linear-gradient(60deg, #E21143, #FFB03A);
         -webkit-background-clip: text;
         color: transparent;
     }
 
-    &__p {
+    p {
         font-size: 30px;
         background-image: linear-gradient(60deg, #E21143, #FFB03A);
         -webkit-background-clip: text;
@@ -66,13 +78,17 @@ body {
 
 
 .wrapper {
+    width: 60vw;
     margin-top: 50px;
-    margin-left: 25%;
+    margin-right: auto;
+    margin-left: auto;
     display: grid;
     gap: 30px;
     grid-template-columns: repeat(5, 150px);
-    grid-template-rows: 150px 150px 150px 150px 150px 150px;
-   .header{
+    grid-template-rows: repeat(4, 150px);
+
+
+    .header {
         margin-right: 450px;
         background-image: linear-gradient(60deg, #E21143, #FFB03A);
         -webkit-background-clip: text;
@@ -86,6 +102,12 @@ body {
         border-radius: 10px;
         transition: all .5s;
         text-align: center;
+
+        &:hover {
+            cursor: pointer;
+            transform: scale(1.2);
+
+        }
 
         &__big1 {
             grid-column: span 2;
@@ -114,59 +136,58 @@ body {
         }
 
 
-
-
-        &:hover {
-            transform: scale(1.2);
-            cursor: pointer;
-
-        }
-
-        // &__header {
-        //     grid-column-end: span 4;
-
-            &:hover {
-                transform: scale(1);
-            }
-        }
-
-        // &__second-header {
-        //     grid-column-end: span 4;
-
-            &:hover {
-                transform: scale(1);
-            }
-        }
-
     }
 }
 
 @media only screen and (max-width:1200px) {
     .wrapper {
         grid-template-columns: repeat(4, 150px);
-        grid-template-rows: 150px 150px 150px 150px 150px 150px 150px 150px;
+        grid-template-rows: repeat(6, 150px);
+
     }
 }
 
 @media only screen and (max-width:950px) {
     .wrapper {
-        grid-template-columns: 150px 150px 150px;
-        grid-template-rows: 150px 150px 150px 150px 150px 150px 150px 150px 150px;
+        grid-template-columns: repeat(3, 150px);
+        grid-template-rows: repeat(6, 150px);
 
     }
 }
 
 @media only screen and (max-width:600px) {
+    body {
+        .menu {
+            font-size: 20px;
+
+            .logo {
+                font-size: 25px;
+            }
+        }
+    }
+
     .wrapper {
 
         grid-template-columns: repeat(2, 150px);
+        grid-template-rows: repeat(10, 150px);
+
     }
 }
 
 @media only screen and (max-width:300px) {
+    body {
+        .menu {
+            font-size: 15px;
+
+            .logo {
+                font-size: 20px;
+            }
+        }
+    }
+
     .wrapper {
-        grid-template-columns: repeat(1, 150);
-        grid-template-rows: 150px 150px 150px 150px 150px 150px 150px 150px;
+        grid-template-columns: repeat(1, 150px);
+        grid-template-rows: repeat(16, 150px);
 
         .box {
             &__big1 {
