--- a/01-HTML-CSS/08-Responsive/Game Site Leon/style.scss
+++ b/01-HTML-CSS/08-Responsive/Game Site Leon/style.scss
@@ -1,192 +1,271 @@
-.container{
+.container {
     display: grid;
-    grid-template-columns: repeat(5,1fr);
-    grid-template-rows: repeat(11,1fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(11, 1fr);
     row-gap: 15px;
-    
-}
- .TopHeader{
-     grid-column: 1/6;
-     grid-row: 1/2;
-     background-color: #f7f1e3;
-     color: red;
-     font-weight: bold;
-     font-size: 50px;
-     text-align:center;
-     font-family: 'Arvo', serif;
-     font-family: 'Comforter Brush', cursive;
-     font-family: 'Inconsolata', monospace;
-     font-family: 'M PLUS Code Latin', sans-serif;
-     font-family: 'Montserrat', sans-serif;
-     font-family: 'Source Code Pro', monospace;
 
-     .icons{position: relative;
-         top: 0;
-         left: 40%;
-         color: black;
-         &:hover{
-             cursor: pointer;
-             color: rgb(57, 97, 107);
-         }
-     }
- }
- .header1{
-     grid-column: 1/6;
+}
+
+.TopHeader {
+    grid-column: 1/6;
+    grid-row: 1/2;
+    background-color: #f7f1e3;
+    color: red;
+    font-weight: bold;
+    font-size: 50px;
+    text-align: center;
+    font-family: 'Arvo', serif;
+    font-family: 'Comforter Brush', cursive;
+    font-family: 'Inconsolata', monospace;
+    font-family: 'M PLUS Code Latin', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Code Pro', monospace;
+
+    .icons {
+        position: relative;
+        top: 0;
+        left: 40%;
+        color: black;
+
+        &:hover {
+            cursor: pointer;
+            color: rgb(57, 97, 107);
+        }
+    }
+}
+
+.header1 {
+    grid-column: 1/6;
     grid-row: 2/2;
-     background-color: burlywood;
-     display: flex;
-     
-     
-    .nav{ border: 2px solid rgb(174, 182, 63);
+    background-color: burlywood;
+    display: flex;
+
+
+    .nav {
+        border: 2px solid rgb(174, 182, 63);
         width: 20%;
         position: relative;
         left: 10%;
-        text-align:center;
+        text-align: center;
         font-weight: bold;
         background-size: cover;
         color: rgb(30, 29, 75);
-        &:hover{
+
+        &:hover {
             cursor: pointer;
             transform: scale(1.2);
             transition: 0.8s;
-        }  
-     }
-          
- }
- .actiongames{
+        }
+    }
+
+}
+
+.actiongames {
     grid-column: 1/6;
     grid-row: 3/5;
     row-gap: 25px;
     background-color: #dfe6e9;
     display: grid;
-    grid-template-columns: repeat(5,1fr);
-    grid-template-rows: repeat(2,1fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     font-family: cursive;
     color: rgb(0, 0, 0);
-    h1{
+
+    @media only screen and(max-width:1200px) {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    @media only screen and(max-width:900px) {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media only screen and(max-width:600px) {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    h1 {
         color: rgb(10, 43, 192);
     }
 
-    .box{border: 2px solid black;
+    .box {
+        border: 2px solid black;
         background-size: cover;
         background-repeat: no-repeat;
         width: 55%;
-        text-align:center;
+        text-align: center;
         margin-left: 64px;
         border-radius: 9px;
-        
-        &:hover{
+
+        &:hover {
             cursor: pointer;
             opacity: 0.6;
             transition: 0.8s;
             transform: scale(1.2);
         }
     }
-  
+
 }
-.sportgames{
+
+.sportgames {
     grid-column: 1/6;
     grid-row: 5/7;
     background-color: rgb(77, 124, 85);
     display: grid;
-    grid-template-columns: repeat(5,1fr);
-    grid-template-rows: repeat(2,1fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     row-gap: 24px;
     font-family: monospace;
 
-    h1{color: lavender;
+    @media only screen and(max-width:1200px) {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
     }
-    .box{border: 2px solid rgb(255, 255, 255);
+
+    @media only screen and(max-width:900px) {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media only screen and(max-width:600px) {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    h1 {
+        color: lavender;
+    }
+
+    .box {
+        border: 2px solid rgb(255, 255, 255);
         background-size: cover;
         background-repeat: no-repeat;
         width: 55%;
-        text-align:center;
+        text-align: center;
         margin-left: 64px;
         border-radius: 9px;
-        font-family:Georgia, 'Times New Roman', Times, serif ;
+        font-family: Georgia, 'Times New Roman', Times, serif;
         color: rgb(255, 255, 255);
-        
-        &:hover{
+
+        &:hover {
             cursor: pointer;
-           opacity: 0.7;
-           transition: 0.7s;
-           transform: scale(1.2);
+            opacity: 0.7;
+            transition: 0.7s;
+            transform: scale(1.2);
         }
-    
+
     }
 }
 
-.shooting{ grid-column: 1/6;
-       grid-row: 7/9;
-       background-color: #81ecec;
-       display: grid;
-       grid-template-columns: repeat(5,1fr);
-       grid-template-rows: repeat(2,1fr);
-       row-gap: 24px;
-       font-family: monospace;
+.shooting {
+    grid-column: 1/6;
+    grid-row: 7/9;
+    background-color: #81ecec;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    row-gap: 24px;
+    font-family: monospace;
 
-    .box{border: 2px solid #636e72;
+    @media only screen and(max-width:1200px) {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    @media only screen and(max-width:900px) {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media only screen and(max-width:600px) {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    .box {
+        border: 2px solid #636e72;
         background-size: cover;
         background-repeat: no-repeat;
         width: 55%;
-        text-align:center;
+        text-align: center;
         margin-left: 64px;
         border-radius: 9px;
-        font-family:Georgia, 'Times New Roman', Times, serif ;
+        font-family: Georgia, 'Times New Roman', Times, serif;
         color: rgb(212, 192, 13);
-        &:hover{
+
+        &:hover {
             cursor: pointer;
-           opacity: 0.7;
-           transition: 0.7s;
-           transform: scale(1.2);
+            opacity: 0.7;
+            transition: 0.7s;
+            transform: scale(1.2);
         }
     }
 }
 
-.zombies{grid-column: 1/6;
+.zombies {
+    grid-column: 1/6;
     grid-row: 9/11;
     background-color: #eccc68;
     display: grid;
-    grid-template-columns: repeat(5,1fr);
-    grid-template-rows: repeat(2,1fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     row-gap: 24px;
     font-family: monospace;
-    .box{border: 2px solid #636e72;
+
+    @media only screen and(max-width:1200px) {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    @media only screen and(max-width:900px) {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media only screen and(max-width:600px) {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    .box {
+        border: 2px solid #636e72;
         background-size: cover;
         background-repeat: no-repeat;
         width: 55%;
-        text-align:center;
+        text-align: center;
         margin-left: 64px;
         border-radius: 9px;
-        font-family:Georgia, 'Times New Roman', Times, serif ;
+        font-family: Georgia, 'Times New Roman', Times, serif;
         color: rgb(255, 255, 255);
-        &:hover{
+
+        &:hover {
             cursor: pointer;
-           opacity: 0.5;
-           transition: 0.7s;
-           transform: scale(1.2);
+            opacity: 0.5;
+            transition: 0.7s;
+            transform: scale(1.2);
         }
     }
 }
-.logo{
+
+.logo {
     position: absolute;
     left: 40%;
     bottom: -195%;
 }
 
-.bottom-nav{position: relative;
+.bottom-nav {
+    position: relative;
     display: flex;
     align-items: flex-end;
     flex-direction: row;
     width: 100%;
     bottom: -40%;
     left: 60%;
-    .box{font-family: monospace;
+
+    .box {
+        font-family: monospace;
         border-right: 2px solid black;
         width: 100px;
         height: 30%;
         text-align: center;
-        &:hover{
+
+        &:hover {
             cursor: pointer;
             background-color: blanchedalmond;
             border-bottom: brown 1px solid;
