--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/style.scss
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/style.scss
@@ -302,17 +302,24 @@ footer {
             'header'
             'top-box-a'
             'top-box-b';
+
+         margin: 15px;   
     }
 
-    .header h1 {
-        font-size: 2.5rem;
+    .header {
+        margin: 15px;
+
+    h1{    
+        font-size: 2.5rem;}
     }
 
     .nav-bar__list {
         grid-template-columns: 1fr;
+        margin: 15px;
     }
 
     .cs-go {
+        margin: 15px;
         grid-template-columns: 1fr;
     }
 
@@ -324,7 +331,13 @@ footer {
 
     .devices {
         grid-template-columns: 1fr;
+        margin: 15px;
     }
+
+    .more-games {
+        margin: 15px;
+    }
+    
 
 
 }
