--- a/01-HTML-CSS/07-SCSS/marina/GameSite.scss
+++ b/01-HTML-CSS/07-SCSS/marina/GameSite.scss
@@ -2,12 +2,11 @@ body{
     background: #1e1f20;
 }
 
-.MainGrid{
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(6, 1fr 1fr 1fr 1fr 1fr 1fr);
-    grid-gap: 10px;
-    height: 700px;
+
+// div{
+//     border: 1px solid grey;
+// }
+
 
     .header{
         grid-column: 1/8;
@@ -16,14 +15,43 @@ body{
         flex-direction: row;
         align-items: center;
         height: 70px;
+
     
         &__logo{
             height: 320px;
+
+            @media only screen and (max-width: 1200px) {
+                height: 300px;   
+            }   
+    
+            @media only screen and (max-width: 992px) {
+                height: 250px;
+                               
+            }
+                      
+            @media only screen and (max-width: 600px) {
+                height: 200px;
+            } 
         }
     
         &__search{
             display: flex;
             margin-left: 20%;
+
+
+            @media only screen and (max-width: 1200px) {
+                display: none;  
+            }
+       
+            @media only screen and (max-width: 992px) {
+                display: none;
+                               
+            }
+                        
+            @media only screen and (max-width: 600px) {
+                display: none;
+            } 
+
         
             input{
                 box-shadow: 2px 2px 6px rgb(17, 16, 16);
@@ -64,6 +92,28 @@ body{
             transition: all .3s ease;  
             margin-left: 5px; 
             box-shadow: 2px 2px 6px rgb(17, 16, 16);
+
+
+            @media only screen and (max-width: 1200px) {
+                height: 35px; 
+                width: 130px; 
+                font-size: 14px;
+            }
+       
+            @media only screen and (max-width: 992px) {
+                height: 30px;
+                width: 110px; 
+                font-size: 12px;
+                               
+            }
+                       
+            @media only screen and (max-width: 600px) {
+                height: 45px;
+                width: 100px; 
+                font-size: 16px;
+                justify-content: center;
+                left: 8%;
+            } 
         }
     
     
@@ -71,6 +121,19 @@ body{
             position: absolute;
             left: 5%;
             top: 7%;
+
+            @media only screen and (max-width: 1200px) {
+                display: none;  
+            }   
+    
+            @media only screen and (max-width: 992px) {
+                display: none;
+                               
+            }
+                       
+            @media only screen and (max-width: 600px) {
+                display: none;
+            } 
         }
     
         .hot>img{
@@ -102,17 +165,33 @@ body{
             height: 20px;
             left: 15%;
             gap: 5px;
-            
-           
+
+
+            @media only screen and (max-width: 1200px) {
+                height: 20px; 
+                width: 110px; 
+                font-size: 14px;
+            }
+       
+            @media only screen and (max-width: 992px) {
+                height: 15px;
+                width: 110px; 
+                font-size: 12px;              
+            }
+                      
+            @media only screen and (max-width: 600px) {
+                display: none;
+            }
+
+
+        
     
             .register{
                 border: none;
                 color: rgb(247, 241, 241);
                 background-color: rgb(7, 131, 44);
                 border-radius: 10px;
-                transition: all .3s ease-in-out;
-    
-                
+                transition: all .3s ease-in-out 
             }
     
             .register:hover, .login:hover{
@@ -140,6 +219,10 @@ body{
     }  
 
 
+
+
+
+
     .addictingGames{
         grid-column: 1/8;
         display: flex;
@@ -148,19 +231,51 @@ body{
         margin-left: 100px;
         margin-right: 100px;
         align-items: center;
+
+
+        @media only screen and (max-width: 1200px) {
+            margin: none;    
+            align-items: center; 
+            display: flex;
+            justify-content: center;      
+        }
+
+        @media only screen and (max-width: 992px) {
+            margin: none;    
+            align-items: center; 
+            display: flex;
+            justify-content: center;                      
+        }
+                
         
     
         &__title{       
             font-family: 'Source Sans Pro', sans-serif;
             font-size: 26px;
             pointer-events: none;
+
+
+            @media only screen and (max-width: 1200px) {
+                font-size: 26px;    
+            }
+       
+            @media only screen and (max-width: 992px) {
+                font-size: 22px; 
+                               
+            }
+                       
+            @media only screen and (max-width: 600px) {
+                font-size: 20px; 
+                margin: none;  
+                vertical-align: middle;
+                text-align: center;
+            }   
         }
     
     }
 
 
-    .content1{
-        grid-column: 1/8;
+    .content1{   
         color: white;
         margin-left: 100px;
         display: grid;
@@ -170,6 +285,19 @@ body{
         margin-left: 90px;
         margin-right: 100px;
         text-align: center;
+
+
+        @media only screen and (max-width: 1200px) {
+             grid-template-columns: repeat(4, 1fr);  
+        }
+
+        @media only screen and (max-width: 992px) {
+            grid-template-columns: repeat(3, 1fr);   
+        }
+
+         @media only screen and (max-width: 600px) {
+            grid-template-columns: repeat(1, 1fr); 
+        }
     
     
         &__game1, &__game2, &__game3, &__game4, &__game5,
@@ -180,8 +308,7 @@ body{
             box-shadow: 
             2px 2px 2px #0a0a0a,
             4px 6px 12px rgba(16, 16, 16, 0.2),
-            6px 6px 18px rgba(3, 3, 3, 0.4);
-            
+            6px 6px 18px rgba(3, 3, 3, 0.4);           
         }
     
         .img {
@@ -190,27 +317,40 @@ body{
            display: block;
            border-radius: 20px;
            transition: all .6s ease;
+
+
+           @media only screen and (max-width: 1200px) {
+              width: 200px;
+              height: 240px;
+            }
+
+           @media only screen and (max-width: 992px) {
+             width: 190px;
+             height: 170px;
+                           
+            }
+               
+           @media only screen and (max-width: 600px) {
+             width: 200px;
+             height: 240px;
+            }
            
            
             :hover{
                cursor: pointer;
                opacity: 0.7;
-               transform: scale(1.1);
-               
+               transform: scale(1.1);  
             }
              
         }
     
-
     
         p {
          font-family: 'Source Sans Pro', sans-serif;
           font-size: 18px;
-          pointer-events: none;
-    
+          pointer-events: none;   
         }
-    
-         
+     
     }  
 
 
@@ -235,10 +375,21 @@ body{
             font-family: 'Source Sans Pro', sans-serif;
             font-size: 26px;
             pointer-events: none;
-    
-            span{
-                color: grey;
+
+            @media only screen and (max-width: 1200px) {
+                font-size: 26px;    
             }
+       
+            @media only screen and (max-width: 992px) {
+                font-size: 22px; 
+                               
+            }
+                        
+            @media only screen and (max-width: 600px) {
+                font-size: 20px;   
+                vertical-align: middle;
+                text-align: center;
+            }  
       
         }
     
@@ -259,6 +410,31 @@ body{
             transition: all 0.5s;
             cursor: pointer;
             margin: 5px;
+
+
+            @media only screen and (max-width: 1200px) {
+                font-size: 22px;
+                height: 50px;
+                width: 300px;
+                left: 32%;
+            }
+    
+    
+    
+            @media only screen and (max-width: 992px) {
+                font-size: 20px;
+                height: 40px;
+                width: 290px;
+                left: 22%;              
+            }
+            
+            
+            @media only screen and (max-width: 600px) {
+                font-size: 16px;
+                height: 40px;
+                width: 290px;
+                left: 18%; 
+            }
     
             span {
                 cursor: pointer;
@@ -306,13 +482,27 @@ body{
         margin-left: 80px;
         margin-right: 100px;
         text-align: center;
+
+
+        @media only screen and (max-width: 1200px) {
+            grid-template-columns: repeat(4, 1fr);  
+        }
+
+
+        @media only screen and (max-width: 992px) {
+            grid-template-columns: repeat(3, 1fr);   
+        }
+
+
+         @media only screen and (max-width: 600px) {
+            grid-template-columns: repeat(1, 1fr); 
+        }
        
     
         &__game1{
             margin: 10px 10px 5px;
             grid-column: 1/4;
-            grid-row: 1/3;
-            
+            grid-row: 1/3; 
         }
     
         .img1{
@@ -327,6 +517,24 @@ body{
             2px 2px 2px #0a0a0a,
             4px 6px 12px rgba(16, 16, 16, 0.2),
             6px 6px 18px rgba(3, 3, 3, 0.4);
+
+
+            @media only screen and (max-width: 1200px) {
+                grid-template-columns: repeat(4, 1fr);  
+            }
+    
+    
+            @media only screen and (max-width: 992px) {
+                grid-template-columns: repeat(2, 1fr); 
+                width: 300px;
+                height: 320px;  
+            }
+    
+            @media only screen and (max-width: 600px) {   
+                grid-template-columns: repeat(1, 1fr);            
+                width: 200px;
+                height: 240px;                 
+            }
     
         }
     
@@ -356,6 +564,24 @@ body{
             text-align: center;
             border-radius: 20px;
             transition: all .6s ease;
+
+            @media only screen and (max-width: 1200px) {
+                width: 200px;
+                height: 240px;
+            }
+    
+    
+    
+            @media only screen and (max-width: 992px) {
+                width: 190px;
+                height: 170px;                              
+            }
+            
+            
+            @media only screen and (max-width: 600px) {
+                width: 200px;
+                height: 240px;
+            }
             
             :hover{
                 cursor: pointer;
@@ -369,8 +595,7 @@ body{
         p {
           font-family: 'Source Sans Pro', sans-serif;
           font-size: 18px;
-          pointer-events: none;
-          
+          pointer-events: none;         
         }
       
     }
@@ -385,7 +610,7 @@ body{
     
     
   
-}
+
 
 
 
