--- a/01-HTML-CSS/08-Responsive/Game Site Leon/style.scss
+++ b/01-HTML-CSS/08-Responsive/Game Site Leon/style.scss
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(11, 1fr);
     row-gap: 15px;
-
+    margin: auto;
 }
 
 .TopHeader {
@@ -144,10 +144,13 @@
         border-radius: 9px;
         font-family: Georgia, 'Times New Roman', Times, serif;
         color: rgb(255, 255, 255);
+        
+      
+     
+     
 
         &:hover {
             cursor: pointer;
-            opacity: 0.7;
             transition: 0.7s;
             transform: scale(1.2);
         }
@@ -245,8 +248,8 @@
 
 .logo {
     position: absolute;
-    left: 40%;
-    bottom: -195%;
+    left: 38%;
+    bottom: -110%;
 }
 
 .bottom-nav {
@@ -255,8 +258,8 @@
     align-items: flex-end;
     flex-direction: row;
     width: 100%;
-    bottom: -40%;
-    left: 60%;
+    bottom: 0%;
+    left: 70%;
 
     .box {
         font-family: monospace;
