--- a/01-HTML-CSS/08-Responsive/Lior/test.scss
+++ b/01-HTML-CSS/08-Responsive/Lior/test.scss
@@ -1,7 +1,6 @@
 @media only screen and (max-width: 1940px)
 {
 
-
   .container
 
   {
@@ -99,7 +98,6 @@ body
 {
   position: relative;
   border-radius: 100px;
-  border: 3px solid white;
   width: 4.3vw;
   height: 100px;
   left: 250px;
@@ -117,12 +115,27 @@ body
   {
     left: 180px;
   }
+
+
+  
+  @media only screen and (max-width: 1538px)
+
+  {
+    left: 180px;
+  }
+
+  @media only screen and (max-width: 1246px)
+
+  {
+    left: 180px;
+    top: 20px;
+  }
+  
   
 
   &:hover
   {
     transform: scale(1.3);
-    border: 3px solid white;
 
   }
 }
@@ -131,7 +144,6 @@ body
 {
     position: absolute;
     display: grid;
-    border: 3px solid white;
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: repeat(6,300px);
     height: 217vh;
@@ -214,7 +226,7 @@ body
           display: flex;
           flex-direction: column;
           position: relative;
-          top: 40px;
+          top: 21px;
           transform: translateY(105%);
           transition: 1.2s;
         }
@@ -379,14 +391,14 @@ body
 h4
 {
     
-        color: rgb(147, 190, 61);
+        color: rgb(205, 226, 14);
         position: relative;
         bottom: 120px;
         width: 20%;
         height: 6vh;
         text-align: center;
         left: 32vw;
-        font-size: 50px;
+        font-size: 47px;
         transition: 1.2s;
 
         &:hover
@@ -420,13 +432,15 @@ h4
         background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
         background-repeat: no-repeat;
         background-size: cover;
-          
+        
         :active
         {
-          background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
-          background-repeat: no-repeat;
-          background-size: cover;        
-        }
+
+            background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+            background-repeat: no-repeat;
+            background-size: cover;        
+        }  
+
     }
     .large
         {
@@ -436,8 +450,7 @@ h4
           top: 170px;
           transform: translateY(195%);
           transition: 1.2s;
-
-
+ 
         }
 
 /*Pictures*/
@@ -784,12 +797,10 @@ h4
 
 
 // the navbar
-
-.banner {
-    width: 80%;
-    height: 5vh;
+  .banner {
+    width: 70%;
+    height: 4vh;
     background-color: rgb(29, 31, 41);
-    border: 3px solid white;
     background-size: cover;
     background-position: center;
     text-align: center;
@@ -797,34 +808,6 @@ h4
     top: -150px;
     left: 19vw;
     position: relative;
-
-    @media  only screen and (max-width:2420px) 
-    {
-
-    }
-
-    @media  only screen and (max-width:2300px) 
-    {
-    }
-
-    @media  only screen and (max-width:2030px) 
-    {
-      width: 90%;
-      text-align: center;
-
-    }
-
-    @media  only screen and (max-width:1566px) 
-    {
-      
-      text-align: left;
-    }
-    @media  only screen and (max-width:1478px) 
-    {
-      
-      text-align: start;
-    }
-
   
 
     &__navbar {
@@ -845,9 +828,40 @@ h4
         margin: 20px;
         width: 75%;
         font-size: 25px;
-
       }
 
+      @media  only screen and (max-width:1207px) 
+      {
+        margin: 20px;
+        width: 85%;
+        font-size: 25px;
+      }
+
+      @media  only screen and (max-width:1046px) 
+      {
+        margin: -10px;
+        width: 95%;
+        font-size: 25px;
+      }
+      @media  only screen and (max-width:942px) 
+      {
+        margin: -10px;
+        width: 105%;
+        font-size: 15px;
+      }
+      @media  only screen and (max-width:837px) 
+      {
+        margin: -20px;
+        width: 135%;
+        font-size: 15px;
+      }
+
+      @media  only screen and (max-width:630px) 
+      {
+        margin: -10px;
+        width: 155%;
+        font-size: 15px;
+      }
   
       & ul li {
         list-style: none;
@@ -862,6 +876,27 @@ h4
           font-weight: 200;
           font-size: 2vh;
           text-transform: uppercase;
+        
+          @media  only screen and (max-width:1505px) 
+          {
+            font-size: 2vh;
+          }
+  
+          @media  only screen and (max-width:1311px) 
+          {
+            font-size: 1.5vh;
+          }
+          @media  only screen and (max-width:610px) 
+          {
+            font-size: 1.1vh;
+          }
+          @media  only screen and (max-width:532px) 
+          {
+            font-size: 1vh;
+            margin: -30px;
+          }
+        
+        
         }
   
   
@@ -882,69 +917,8 @@ h4
         }
       }
   
-      &__search_box {
-        position: relative;
-        border: 3px solid white;
-        left: 60vw;
-        top: -1vh;
-        transform: translate(-50%, -50%);
-        transition: 10s;
-        background: rgb(29, 31, 41);
-        height: 30px;
-        width: 15vw;
-
-        @media  only screen and (max-width:2354px) 
-        {
-          left: 63vw;
-
-        }
-    
-        @media  only screen and (max-width:2300px) 
-        {
-        }
-    
-        @media  only screen and (max-width:2030px) 
-        {
-          left: 73vw;
-          width: 16vw;
-
-        }
-    
-        @media  only screen and (max-width:1566px) 
-        {
-          left: 74vw;
-          width: 18vw;
-          
-        }
-        
-
-        @media  only screen and (max-width:1170px) 
-        {
-          left: 77vw;
-          width: 20vw;
-          
-        }
-  
-  
-  
-        & :hover>.navbar__search_box__search_text {
-          width: 240px;
-          padding: 0 -5px;
-        }
-  
-        &__Search-btn {
-          position: relative;
-          justify-content: center;
-          align-items: center;
-          border-radius: 50%;
-          background: greenyellow;
-          height: 40px;
-          width: 20px;
-          top: -0px;
-
-        }
-  
       }
   
-    }
+    
   }
+  
