--- a/01-HTML-CSS/07-SCSS/yahya/style2.scss
+++ b/01-HTML-CSS/07-SCSS/yahya/style2.scss
@@ -40,17 +40,19 @@ p{
   margin: 100px;
   border-radius: 10px ;
   border: 2px white solid;
+  width: 700px;
  
    
-   ul{
-     
+    a{
+      font-size: 45px;
       text-align: italic;
+      margin: 10px;
    }
    a:hover{
-        
-      color: rgb(0, 0, 0);
-      text-align: italic;
-      color: white;
+     
+      color:red ;
+    
+       text-align: italic;
       justify-self:center;
     } 
      
@@ -116,11 +118,14 @@ p{
     margin-top: 900px;
  }
  }
+ p:hover{
+color: white;
+ }
 
 }
 /*////////////////////////////(small artical grid)////////////////////////////////////////*/
 
-.num1{
+.articil1{
    display: grid;
    background: color #999;
    grid-template-columns:repeat(4,400px);
@@ -138,11 +143,13 @@ p{
       width: 400px;
       border-radius: 15px;
    }
-  
+   p:hover{
+      color: white;
+       }
 }
 /*////////////////////////////(small artical grid)////////////////////////////////////////*/
 
-.num2{
+.articil2{
    display: grid;
    background: color #999;
    grid-template-columns:repeat(4,400px);
@@ -160,11 +167,13 @@ p{
       width: 400px;
       border-radius: 15px;
    }
-  
+   p:hover{
+      color: white;
+       }
 }
     /*////////////////////////////(small artical grid)////////////////////////////////////////*/
 
-.num3{
+.articil3{
    display: grid;
    background: color #999;
    grid-template-columns:repeat(4,400px);
@@ -181,11 +190,13 @@ p{
       width: 400px;
       border-radius: 15px;
    }
-   
+   p:hover{
+      color: white;
+       }  
 }
 /*////////////////////////////(small artical grid)////////////////////////////////////////*/
 
-.num4{
+.articil4{
    display: grid;
    background: color #999;
    grid-template-columns:repeat(4,400px);
@@ -202,7 +213,9 @@ p{
       width: 400px;
       border-radius: 15px;
    }
-   
+   p:hover{
+      color: white;
+       }  
 }
 .text{
       
@@ -262,15 +275,15 @@ img:hover{
       display: grid;
       grid-template-columns:repeat(1, 1fr) ;
    }
-   .num2{
+   .articil2{
       display: grid;
       grid-template-columns: repeat(2, 1fr);
    }
-   .num3{
+   .articil3{
       display: grid;
       grid-template-columns: repeat(1, 1fr);
    }
-   .num4{
+   .articil4{
       display: grid;
       grid-template-columns: repeat(1, 1fr);
    }
@@ -289,15 +302,15 @@ img:hover{
       display: grid;
       grid-template-columns:repeat(1, 1fr) ;
    }
-   .num2{
+   .articil2{
       display: grid;
       grid-template-columns: repeat(2, 1fr);
    }
-   .num3{
+   .articil3{
       display: grid;
       grid-template-columns: repeat(1, 1fr);
    }
-   .num4{
+   .articil4{
       display: grid;
       grid-template-columns: repeat(1, 1fr);
    }
@@ -316,16 +329,16 @@ img:hover{
       display: grid;
       grid-template-columns:repeat(1, 1fr) ;
    }
-   .num2{
+   .articil2{
       display: grid;
       grid-template-columns: repeat(1, 1fr);
 
    }
-   .num3{
+   .articil3{
       display: grid;
       grid-template-columns: repeat(1, 1fr);
    }
-   .num4{
+   .articil4{
       display: grid;
       grid-template-columns: repeat(1, 1fr);
    }
