--- a/01-HTML-CSS/07-SCSS/yahya/style2.scss
+++ b/01-HTML-CSS/07-SCSS/yahya/style2.scss
@@ -61,7 +61,7 @@ p{
 
 /*////////////////////////////(Menu/flex)////////////////////////////////////////*/
 
-.menu2{
+.navmenu2{
    display: flex;
    flex-wrap: wrap;
    height: 50px;
