--- a/01-HTML-CSS/07-SCSS/yahya/style2.scss
+++ b/01-HTML-CSS/07-SCSS/yahya/style2.scss
@@ -4,7 +4,14 @@ body{
    
    
 }
-
+input{
+   float: right;
+   font-size: xx-large;
+}
+button{
+   float: right;
+   font-size: xx-large;
+}
 a{
    font-size: xx-large;
  /* background-color: black;*/
