--- a/01-HTML-CSS/05-grid/Tal/02-areas.scss
+++ b/01-HTML-CSS/05-grid/Tal/02-areas.scss
@@ -1,37 +1,26 @@
-.wrapper {
-
+.wrapper{
     display: grid;
-    gap: 5px;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 200px);
+    grid-template-rows: repeat(4, 150px);
+    gap: 5px;
 
-    .box {
-        background-color: green;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: white;
-        font-size: 80px;
-    
+    .box{
+        background-color: palevioletred;
     }
-    
+
     .header{
-        grid-column-start: 1;
-        grid-column-end: 5;
-        grid-row-start: 1;
-        grid-row-end:2;
+        grid-column: 2/5;
+       
         background-color: yellow;
+        // grid-row-start: 1;
+        grid-row:span 2 ;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .menu{
+        grid-row:2/5;
         background-color: orange;
-        // grid-row-start: 2;
-        // grid-row-end:5 ;
-        // grid-column-start: 1;
-        // grid-column-end:2 ;
-        grid-column-start: 1;
-        grid-column-end: span 3;
-        grid-row-start: 2;
-        grid-row-end: span 2;
     }
 }
-
