--- a/01-HTML-CSS/08-Responsive/Roi-Homework/style.scss
+++ b/01-HTML-CSS/08-Responsive/Roi-Homework/style.scss
@@ -26,6 +26,11 @@ grid-template-rows: 100vh;
         grid-template-columns: 2000px;
         justify-content: center;
 
+        @media only screen and (max-width: 1786px) {
+            grid-template-columns:500px;
+        }
+
+
         .MusicTitle {
             color:white;
             display: grid;
