--- a/01-HTML-CSS/07-SCSS/michaeldubovyk/style2.scss
+++ b/01-HTML-CSS/07-SCSS/michaeldubovyk/style2.scss
@@ -195,10 +195,11 @@ body {
 
             width: 100%;
             height: 20px;
-            background: #171717;
+            background: #c5c2c2;
         }
 
         &::-webkit-slider-thumb{
+            
             background: rgb(53, 53, 53);
         }
 
