--- a/01-HTML-CSS/07-SCSS/john/style.scss
+++ b/01-HTML-CSS/07-SCSS/john/style.scss
@@ -55,8 +55,7 @@ body {
 }
 
 .classicgames {
-	display: grid;
-	grid-template-columns: repeat(4,1fr);
-	grid-template-rows: repeat(2,1fr);
+	display: flex;
+	
 	justify-content: space-around;
 }
