--- a/01-HTML-CSS/09-animations/Tal/style.scss
+++ b/01-HTML-CSS/09-animations/Tal/style.scss
@@ -4,12 +4,12 @@
     background-color: purple;
     position: relative;
     top:50vw;
-    animation-name: moveUp;
-    animation-duration: 3s;
+    animation-name:moveRight;
+    animation-duration: 2s;
     animation-delay:1s;
-    animation-iteration-count:1;
-    animation-direction:normal ;
-    animation-timing-function:ease-in-out;
+    animation-iteration-count:3;
+    animation-direction:alternate-reverse ;
+    animation-timing-function:linear;
     animation-fill-mode: forwards;
   
 }
@@ -19,7 +19,7 @@
         left:0vw;
     }
     to{
-        left:50vw;
+        left:80vw;
     }
 }
 
