--- a/01-HTML-CSS/09-animations/noa/style.scss
+++ b/01-HTML-CSS/09-animations/noa/style.scss
@@ -7,15 +7,16 @@ body{
     height: 100px;
     width: 100px;
     background-color: yellow;
-    position: relative;
+    position: absolute;
     top: 50px;
-    right: 20%
+    right: 20%;
+    
+    &:nth-child(2){
+        background-color: blue;
+        position: relative;
+        top: 50px;
+        left: 20%
+    }
 
 }
 
-.box :nth-child(2){
-    background-color: blue;
-    position: relative;
-    top: 50px;
-    left: 20%
-}
