--- a/01-HTML-CSS/09-animations/Tal/style.scss
+++ b/01-HTML-CSS/09-animations/Tal/style.scss
@@ -3,14 +3,14 @@
     height: 100px;
     background-color: purple;
     position: relative;
-    top:50vw;
-    animation-name: moveUp;
+    //top:50vw;
+    animation-name: moveLeft;
     animation-duration: 3s;
     animation-delay:1s;
-    animation-iteration-count:1;
-    animation-direction:normal ;
+    animation-iteration-count:3;
+    animation-direction:reverse ;
     animation-timing-function:ease-in-out;
-    animation-fill-mode: forwards;
+    animation-fill-mode:backwards;
   
 }
 
@@ -23,11 +23,11 @@
     }
 }
 
-@keyframes moveUp {
+@keyframes moveLeft {
     from{
-        top:50vw;
+        left:50vw;
     }
     to{
-        top:0vw;
+        left:0vw;
     }
 }
