--- a/01-HTML-CSS/09-animations/Andrew/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew/style.scss
@@ -1,7 +1,7 @@
 
 body{
     perspective: 800px;
-    perspective-origin: 0% 50% ;
+    perspective-origin: 50% 30% ;
 }
 .conteiner{
     position: relative;
@@ -14,7 +14,8 @@ body{
 }
 .pic{
     position: absolute;
-    background-image: url(https://picsum.photos/200);
+    background-image: url(https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg);
+    background-size: cover;
     width: 200px;
     height: 200px;
 }
