--- a/01-HTML-CSS/09-animations/noa/style.scss
+++ b/01-HTML-CSS/09-animations/noa/style.scss
@@ -1,22 +1,41 @@
-
-body{
+body {
     position: relative;
 }
 
-.box{
+.box {
     height: 100px;
     width: 100px;
     background-color: yellow;
     position: absolute;
     top: 50px;
     right: 20%;
-    
-    &:nth-child(2){
+    animation-name: yellow;
+    animation-duration: 2s;
+
+
+    &:nth-child(2) {
         background-color: blue;
         position: relative;
         top: 50px;
-        left: 20%
+        left: 20%;
+        animation-name: blue;
     }
-
 }
 
+@keyframes yellow{
+    from{
+        right: 20%;
+    }
+    to{
+        right: 50%;
+    }
+}
+
+@keyframes blue{
+    from{
+        left: 20%;
+    }
+    to{
+        left: 50%;
+    }
+}
