--- a/01-HTML-CSS/09-animations/Khemich/style.scss
+++ b/01-HTML-CSS/09-animations/Khemich/style.scss
@@ -32,6 +32,7 @@
     100% {
         transform: scale(1.5);
         background-color: rgb(21, 110, 36);
+        background-image: image();
     }
 
 }
