end of nav. next - monthly tasks

--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
@@ -11,24 +11,27 @@ nav {
 }
 
 nav ul {
-    background: #444;
+    background: rgb(0, 0, 0);
     list-style-type: none;
     display: flex;
+    align-items: center;
     flex-direction: row;
     justify-content: space-around;
+    padding: 1rem;
 
     li a {
         color: #f9f9f9;
         display: block;
-        padding: 0.8rem 1rem;
+        padding: .8rem 1rem;
         text-decoration: none;
-        text-transform: capitalize;
+        
     }
 }
 
 nav ul li a:hover {
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(68, 68, 68,);
     text-underline-position: below;
+    border-radius: 3rem;
 }
 
 @media only screen and (min-width: 900px) {
@@ -42,25 +45,29 @@ nav ul li a:hover {
             li {
                 flex: 1 2 auto;
                 text-align: center;
+                
             }
             
         }
     }
-    #monthly-tasks {
+    #monthly-tasks{
         &:hover {
-            //animation: pulse 0.5s 3s infinite alternate;
-    
-            animation-name: fade, shrink;
-            animation-duration: 0.5s, 0.53s;
-            animation-iteration-count: infinite, infinite;
-            animation-direction: alternate, alternate;
-            animation-timing-function: ease-in-out;
+        .material-icons {
+           
+                animation: pulse .5s infinite alternate;
+        
+                // animation-name: fade, shrink;
+                // animation-duration: 0.5s, 0.53s;
+                // animation-iteration-count: infinite, infinite;
+                // animation-direction: alternate, alternate;
+                // animation-timing-function: ease-in-out;
+            }
         }
     }
+    
 }
 
-
-
+// KEYFRAMES 
 @keyframes fade {
     from {
         opacity: 1;
@@ -80,3 +87,41 @@ nav ul li a:hover {
         transform: scale(0.75);
     }
 }
+@keyframes moveRight {
+    from {
+        left: 0vw;
+    }
+
+    to {
+        left: 50vw;
+    }
+}
+@keyframes moveUp {
+    from {
+        top: 50vw;
+    }
+
+    to {
+        top: 0vw;
+    }
+}
+
+@keyframes pulse {
+    from {
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    to {
+        transform: scale(0.75);
+        opacity: 0.25;
+    }
+}
+
+
+//icon styles
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-30 { font-size: 30px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-40 { font-size: 40px; }
