--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
@@ -1,13 +1,21 @@
-#landing, nav,ul, li,a{
+
+
+#control__nav,
+nav,
+ul,
+li,
+a {
     padding: 0;
     margin: 0;
 }
+
 
 nav {
     position: fixed;
     bottom: 0;
     left: 0;
     min-width: 100%;
+    z-index: 999;
 }
 
 nav ul {
@@ -24,20 +32,46 @@ nav ul {
         display: block;
         padding: .8rem 1rem;
         text-decoration: none;
-        
+
+        &:hover {
+            background: rgba(68, 68, 68, );
+            text-underline-position: below;
+            border-radius: 3rem;
+        }
     }
 }
 
-nav ul li a:hover {
-    background: rgba(68, 68, 68,);
-    text-underline-position: below;
-    border-radius: 3rem;
+
+
+#hidden {
+    display: none;
+    top: 10%;
 }
 
-@media only screen and (min-width: 900px) {
+#control {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+&__nav{
+    align-self: center;
+
+    &__toggle {
+        display: none;
+        &:checked~nav {
+            display: block;
+        }
+    }
+}
+    &__mytasks {
+       
+    }
+}
+
+@media only screen and (min-width: 600px) {
     nav {
         top: 0;
-        
+
 
         ul {
             top: 0;
@@ -45,17 +79,18 @@ nav ul li a:hover {
             li {
                 flex: 1 2 auto;
                 text-align: center;
-                
+
             }
-            
+
         }
     }
-    #monthly-tasks{
+
+    #monthly-tasks {
         &:hover {
-        .material-icons {
-           
+            .material-icons {
+
                 animation: pulse .5s infinite alternate;
-        
+
                 // animation-name: fade, shrink;
                 // animation-duration: 0.5s, 0.53s;
                 // animation-iteration-count: infinite, infinite;
@@ -64,7 +99,13 @@ nav ul li a:hover {
             }
         }
     }
-    
+
+    #hidden {
+        top: 0;
+        display: inline;
+    }
+
+
 }
 
 // KEYFRAMES 
@@ -87,6 +128,7 @@ nav ul li a:hover {
         transform: scale(0.75);
     }
 }
+
 @keyframes moveRight {
     from {
         left: 0vw;
@@ -96,6 +138,7 @@ nav ul li a:hover {
         left: 50vw;
     }
 }
+
 @keyframes moveUp {
     from {
         top: 50vw;
@@ -120,8 +163,22 @@ nav ul li a:hover {
 
 
 //icon styles
-.material-icons.md-18 { font-size: 18px; }
-.material-icons.md-24 { font-size: 24px; }
-.material-icons.md-30 { font-size: 30px; }
-.material-icons.md-36 { font-size: 36px; }
-.material-icons.md-40 { font-size: 40px; }
+.material-icons.md-18 {
+    font-size: 18px;
+}
+
+.material-icons.md-24 {
+    font-size: 24px;
+}
+
+.material-icons.md-30 {
+    font-size: 30px;
+}
+
+.material-icons.md-36 {
+    font-size: 36px;
+}
+
+.material-icons.md-40 {
+    font-size: 40px;
+}
