--- a/01-HTML-CSS/08-Responsive/marina/style.scss
+++ b/01-HTML-CSS/08-Responsive/marina/style.scss
@@ -7,17 +7,19 @@ body{
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(4, 1fr);
-    @media only screen and (max-width: 1200) {
+ 
+    @media only screen and (max-width: 1200px) {
+     
         grid-template-columns: repeat(3, 1fr);
         background-color: rgb(195, 255, 0);
     }
 
-    @media only screen and (max-width: 900) {
+    @media only screen and (max-width: 900px) {
         grid-template-columns: repeat(2, 1fr);
         background-color: rgb(255, 0, 13);
     }
 
-    @media only screen and (max-width: 600) {
+    @media only screen and (max-width: 600px) {
         grid-template-columns: repeat(1, 1fr);
         background-color: blue;
     }
