--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
@@ -1,7 +1,16 @@
-:root{
-    opacity: 1;
-}
 //Andrew Start
+:root{
+    --color-dark-grey: #22282c;
+    --color-mid-grey: #2E3137;
+    --color-light-grey: #383C3F;
+    --color-white: #DDDDDD;
+    --color-orange: #EFAA79;
+    --color-brown: #3D2f31;
+    --color-dark-green: #303A37;
+    --color-light-green: #89A290;
+    --color-red: #BB615D;
+}
+
 
 
 
