--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
@@ -9,8 +9,20 @@
     --color-dark-green: #303A37;
     --color-light-green: #89A290;
     --color-red: #BB615D;
-}
 
+    background-color: var(--color-dark-grey);
+}
+.header{
+    &__icon{
+        border: 1px solid var(--color-light-grey);
+        border-radius: 5px;
+        width: 30px;
+        height: 30px;
+    }
+    &__item{
+        border-radius: 5px;
+    }
+}
 
 
 
