--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -1,3 +1,18 @@
+body{
+    display: flex;
+    background: #eee;
+    margin: 0;
+    height: auto;
+    
+}
+#landing{
+    max-width: 576px;
+    height: 1224px;
+    
+    margin: auto;
+    background-color: red;
+    
+    }
 #landing-home {
     height: 100vh;
     background: white;
@@ -5,7 +20,6 @@
 
     &__logo {
         display: flex;
-  
 
         img {
             height: 60px;
@@ -36,41 +50,126 @@
             height: 50px;
         }
     }
-    &__task{
+
+    &__task {
         display: flex;
         flex-direction: column;
         font-weight: bold;
-        .task{
+
+        .task {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            
+
         }
-        .icon{
+
+        .icon {
             margin-top: 15px;
             height: 50px;
             width: 50px;
             border-radius: 5px;
-            &__1{
+
+            &__1 {
                 background-color: #ffc898;
             }
-            &__2{
+
+            &__2 {
                 background-color: #aaeffa;
             }
-            &__3{
+
+            &__3 {
                 background-color: #f4ff7f;
             }
-            i{
-                margin-left:13px;
+
+            i {
+                margin-left: 13px;
                 margin-top: 13px;
             }
         }
     }
-    &__recent{
-        .recent__title{
+
+    &__recent {
+        .recent__title {
             display: flex;
             align-items: center;
             justify-content: space-between;
         }
     }
 }
+
+main{
+    padding-top: 6vh;
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    flex-direction: row;
+    align-self: center;
+}
+#landing__task-count{
+    display: flex;
+    flex-direction: row;
+    min-width: 100%;
+    background: #aaeffa;
+    height: fit-content;
+    overflow-y: scroll;
+    
+    
+    .box{
+        justify-content: center;
+        font-family: 'Poppins', sans-serif;
+        text-transform:capitalize;
+        background: white;
+       border-radius: .5rem;
+       padding: 0rem 1rem 1rem 2rem;
+       min-width: 30vw;
+       margin: 1rem;
+       height: auto;
+       
+       
+       
+       &__flex{
+        box-sizing: content-box;
+        display: flex;
+        
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+        
+        
+        
+       }
+&__header{
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    
+   
+   
+    
+}
+&__title{
+    display:grid;
+    grid-gap: 0;
+    height: min-content;
+}
+&__logo{
+    font-weight: bolder 700;
+    font-size: 1.5rem;
+    
+    margin-right: 1rem;
+    background-color: powderblue;
+    padding: .7rem;
+    border-radius: .5rem;
+}
+
+    }
+}
+
+
+
+
+
+
+
+
+
