--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -350,7 +350,7 @@
 
         }
 
-        .button{
+        .buttons{
             display:flex;
             justify-content:center;
             gap:2rem;
