--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -356,10 +356,45 @@
             gap:2rem;
             border-radius:3%;
 
-         &.button__add{
-
-         }
+        
         }
+        
+        .button__add{
+            background-color:white;
+            color:rgb(10, 156, 156);
+            font-weight:bold;
+            border:2px solid rgb(10, 156, 156);
+            border-radius:10%;
+            padding-left:4%;
+            padding-right:4%;
+            padding-top:1%;
+            padding-bottom:1%;
+
+            &:hover{
+                background-color: rgba(235, 222, 222, 0.76);
+                cursor: pointer;
+
+            }
+            
+          }
+        .button__checkout{
+            background-color:rgb(10, 156, 156);
+            color:white;
+            font-weight:bold;
+            border:2px solid rgb(10, 156, 156);
+            border-radius:10%;
+            padding-left:4%;
+            padding-right:4%;
+            padding-top:1%;
+            padding-bottom:1%;
+
+            &:hover{
+                background-color: rgba(10, 156, 156, 0.637);
+                cursor: pointer;
+
+            }
+            
+          }
 
 
     }
