--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
@@ -37,17 +37,19 @@
 }
 
 .footer{
+    display: flex;
+    justify-content: center;
     position: fixed;
     bottom: 20px;
     height: 120px;
     background-color: var(--color-light-grey);
-    width: 90vw;
+    
     border-radius: 20px;
     margin: 4vw;
     &-container{
         width: 640px;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
         color: var(--color-lighter-grey);
         font-size: 1.2rem;
         *{
@@ -62,13 +64,32 @@
             &::after{
                 content: 'Market';
                 position: absolute;
-                bottom: -0.5em;
+                bottom: 15px;
                 left: 16px;
             }
         }
         &__exchange{
+            position: relative;
+            width: 90px;
+            svg{
+                position: absolute;
+                top: -45px;
+                right: 0px;
+                width: 90px;
+                fill: var(--color-lighter-grey);
+                .st1{
+                    fill: #bababa;
+                }
+                .st2{
+                    fill: var(--color-white);
+                    filter: drop-shadow( 2px 0px #7E8082 );
+                }
+            }
             &::after{
                 content: 'Exchange';
+                position: absolute;
+                bottom: 15px;
+                left: 12px;
             }
         }
         &__wallet{
@@ -80,7 +101,7 @@
             &::after{
                 content: 'Wallet';
                 position: absolute;
-                bottom: -0.5em;
+                bottom: 15px;
                 left: 23px;
             }
         }
@@ -89,6 +110,7 @@
 
 .wallet {
     width: 640px;
+    border: 1px solid red ;
     margin: 15px;
     &-banner {
         display: flex;
