--- a/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/style3.scss
+++ b/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/style3.scss
@@ -1,6 +1,51 @@
+
+
+@mixin flexCenter($justify, $direction){
+    display: flex;
+    justify-content: $justify;
+    flex-direction: $direction;
+    align-items: center;
+}
+
+// colors and font //
+
+$iconscolor: rgb(62, 60, 60);
+$fontcolor: rgb(133, 122, 150);
+$primarycolor1: rgb(82, 6, 97);
+$primarycolor2: rgb(169, 38, 164);
+$mainFontFamily: 'Neue Haas Grotesk Display Pro', sans-serif; 
+$shadow: 1px 1px 1px #a8a7a7, 1px 13px 26px rgba(99, 91, 105, 0.4);
+$bgcolor: rgb(238,243,247);
+
+
 body{
+    padding: 0.7em;
+    font-family: $mainFontFamily;
+    background-color: $bgcolor;
+}
+
+.schetop {
 
 
-    border: 0px;
+    @include flexCenter(space-between);
+    height: 5vh;
+    border: 0.5px solid black;
+    padding-inline: 0.2em;
+    color: $iconscolor;
+
+    .schetop__back{
+        font-size: 24px;
+    }
+
+}
+
+.schetitle{
+
+    @include flexCenter(center, column);
+    margin-block: 0px;
+
+    h1, h2, p{
+    @include flexCenter(center, row);
+    }
 
 }
